--- a/src/tools/run.html
+++ b/src/tools/run.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deshader Runner Tool</title>
+    <title>Deshader Launcher Tool</title>
 </head>
 
 <body
