--- a/editor/index.html
+++ b/editor/index.html
@@ -8,7 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Code" />
-    <link rel="apple-touch-icon" href="/code-192.png" />
+    <link rel="apple-touch-icon" href="./node_modules/vscode-web/dist/code-192.png" />
 
     <!-- Disable pinch zooming -->
     <meta
@@ -17,8 +17,8 @@
     />
 
     <!-- Workbench Icon/Manifest/CSS -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="./node_modules/vscode-web/dist/favicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="./node_modules/vscode-web/dist/manifest.json" />
     <link
       data-name="vs/workbench/workbench.web.main"
       rel="stylesheet"
