--- a/editor/index.html
+++ b/editor/index.html
@@ -1,54 +1,52 @@
 <!-- Copyright (C) Microsoft Corporation. All rights reserved. -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
 
-    <!-- Mobile tweaks -->
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Code" />
-    <link rel="apple-touch-icon" href="./node_modules/vscode-web/dist/code-192.png" />
+<head>
+  <meta charset="utf-8" />
 
-    <!-- Disable pinch zooming -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
-    />
+  <!-- Mobile tweaks -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Deshader Editor" />
+  <link rel="apple-touch-icon" href="./node_modules/vscode-web/dist/code-192.png" />
 
-    <!-- Workbench Icon/Manifest/CSS -->
-    <link rel="icon" href="./node_modules/vscode-web/dist/favicon.ico" type="image/x-icon" />
-    <link rel="manifest" href="./node_modules/vscode-web/dist/manifest.json" />
-    <link
-      data-name="vs/workbench/workbench.web.main"
-      rel="stylesheet"
-      href="./node_modules/vscode-web/dist/out/vs/workbench/workbench.web.main.css"
-    />
-  </head>
+  <!-- Disable pinch zooming -->
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 
-  <body aria-label=""></body>
+  <!-- Workbench Icon/Manifest/CSS -->
+  <link rel="icon" href="./node_modules/vscode-web/dist/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="./deshader-vscode/deshader.png" type="image/png" />
+  <link rel="manifest" href="./node_modules/vscode-web/dist/manifest.json" />
+  <link data-name="vs/workbench/workbench.web.main" rel="stylesheet"
+    href="./node_modules/vscode-web/dist/out/vs/workbench/workbench.web.main.css" />
+</head>
 
-  <!-- Startup (do not modify order of script tags!) -->
-  <script src="./node_modules/vscode-web/dist/out/vs/loader.js"></script>
-  <script src="./node_modules/vscode-web/dist/out/vs/webPackagePaths.js"></script>
-  <script>
-    Object.keys(self.webPackagePaths).map(function (key, index) {
-      self.webPackagePaths[
-        key
-      ] = `${window.location.origin}/node_modules/vscode-web/dist/node_modules/${key}/${self.webPackagePaths[key]}`;
-    });
-    require.config({
-      baseUrl: `${window.location.origin}/node_modules/vscode-web/dist/out`,
-      recordStats: true,
-      trustedTypesPolicy: window.trustedTypes?.createPolicy('amdLoader', {
-        createScriptURL(value) {
-          return value;
-        },
-      }),
-      paths: self.webPackagePaths,
-    });
-  </script>
-  <script src="./node_modules/vscode-web/dist/out/vs/workbench/workbench.web.main.nls.js"></script>
-  <script src="./node_modules/vscode-web/dist/out/vs/workbench/workbench.web.main.js"></script>
-  <script src="./node_modules/vscode-web/dist/out/vs/code/browser/workbench/workbench.js"></script>
+<body aria-label=""></body>
+
+<!-- Startup (do not modify order of script tags!) -->
+<script src="./node_modules/vscode-web/dist/out/vs/loader.js"></script>
+<script src="./node_modules/vscode-web/dist/out/vs/webPackagePaths.js"></script>
+<script>
+  Object.keys(self.webPackagePaths).map(function (key, index) {
+    self.webPackagePaths[
+      key
+    ] = `${window.location.origin}/node_modules/vscode-web/dist/node_modules/${key}/${self.webPackagePaths[key]}`;
+  });
+  require.config({
+    baseUrl: `${window.location.origin}/node_modules/vscode-web/dist/out`,
+    recordStats: true,
+    trustedTypesPolicy: window.trustedTypes?.createPolicy('amdLoader', {
+      createScriptURL(value) {
+        return value;
+      },
+    }),
+    paths: self.webPackagePaths,
+  });
+</script>
+<script src="./node_modules/vscode-web/dist/out/vs/workbench/workbench.web.main.nls.js"></script>
+<script src="./node_modules/vscode-web/dist/out/vs/workbench/workbench.web.main.js"></script>
+<script src="./node_modules/vscode-web/dist/out/vs/code/browser/workbench/workbench.js"></script>
+
 </html>
